--- a/Alafrancaise.html
+++ b/Alafrancaise.html
@@ -41,6 +41,9 @@
             <div class="menu__title">
                 <h1>À la française</h1>
                 </div>
+                <div class="heart__food">
+                    <i class="far fa-heart"></i>
+                </div>
 
         <!--MENU-->
 
