--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -41,9 +41,9 @@
             <div class="menu__title">
                 <h1>La note enchantée</h1>
                 </div>
-                <div class="heart">
+                <div class="heart__food">
                     <i class="far fa-heart"></i>
-                  </div>
+                </div>
 
         <!--MENU-->
         
