--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -27,13 +27,13 @@
         </div>
         </a>
         <div class="logo">
-            <img class="svg-logo" src="src/ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
+            <img class="svg-logo" src="ohmyfoodsvg.svg" alt="Logo de Ohmyfood">
         </div>
         
         </header>
 
         <div class="background">
-            <img class="background__img" src="src/palgout.jpg" alt="Image du restaurant La palette du goût"
+            <img class="background__img" src="palgout.jpg" alt="Image du restaurant La palette du goût"
             width="365" height="250">
         </div>
 
@@ -42,6 +42,9 @@
 
             <div class="menu__title">
                 <h1>La palette du goût</h1>
+                </div>
+                <div class="heart__food">
+                    <i class="far fa-heart"></i>
                 </div>
 
         <!--MENU-->
